--- a/a_login.html
+++ b/a_login.html
@@ -122,7 +122,7 @@
 
 			</div>
 		</div>
-		<script src="js/mui.min.js"></script>
+		<script src="js/mui.js"></script>
 		<script src="js/mui.enterfocus.js"></script>
 		<script src="js/UserInfo.js"></script>
 		<script>
@@ -143,9 +143,7 @@
 					var toMain = function() {
 						var backid = self.backid;
 						if(backid){
-							var backwebview = plus.webview.getWebviewById(backid);
-							console.log(backwebview.id);
-							mui.fire(backwebview, 'login-refresh');
+							mui.fire(self.opener(), 'login-refresh');
 						}
 						mui.back();
 					};
