--- a/account/m_account_change_password.html
+++ b/account/m_account_change_password.html
@@ -34,7 +34,7 @@
 			</div>
 
 		</div>
-		<script src="../js/mui.min.js"></script>
+		<script src="../js/mui.js"></script>
 		<script src="../js/accounts/user-validate.js"></script>
 		<script src="../js/UserInfo.js"></script>
 		<script type="text/javascript" charset="utf-8">
