--- a/account/m_account_exchange.html
+++ b/account/m_account_exchange.html
@@ -123,7 +123,7 @@
         <span class="btn_x mui-icon mui-icon-closeempty"></span>
     </div>
   </div>
-    <script src="../js/mui.min.js"></script>
+    <script src="../js/mui.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../js/UserInfo.js"></script>
     <script type="text/javascript" charset="utf-8">
       	mui.init({
