--- a/account/m_account_invite.html
+++ b/account/m_account_invite.html
@@ -55,7 +55,7 @@
 		</div>
 	</div>
 
-    <script src="../js/mui.min.js"></script>
+    <script src="../js/mui.js"></script>
     <script src="../js/UserInfo.js"></script>
     <script src="../js/share.js"></script>
     <script type="text/javascript" charset="utf-8">
