--- a/account/m_account_settings.html
+++ b/account/m_account_settings.html
@@ -54,7 +54,7 @@
 		    </ul>
 		    <button id="logout" type="button" class="mui-btn mui-btn-danger mui-btn-block">退出该帐户</button>
 		</div>
-		<script src="../js/mui.min.js"></script>
+		<script src="../js/mui.js"></script>
 		<script src="../js/UserInfo.js"></script>
 		<script>
       	mui.init();
