--- a/account/m_account_withdraw.html
+++ b/account/m_account_withdraw.html
@@ -59,7 +59,7 @@
 		</div>
 
 
-		<script src="../js/mui.min.js"></script>
+		<script src="../js/mui.js"></script>
 		<script src="../js/UserInfo.js"></script>
 		<!--弹窗部分-->
 		<script type="text/javascript" charset="utf-8">
