--- a/account/m_detail_press.html
+++ b/account/m_detail_press.html
@@ -34,7 +34,7 @@
 		</header>
 		<div id="content" class="mui-content">
 		</div>
-		<script src="../js/mui.min.js"></script>
+		<script src="../js/mui.js"></script>
 		<script src="../js/share.js" charset="utf-8"></script>
 		<script type="text/javascript" charset="utf-8">
 			mui.init();
