--- a/account/m_password_reset.html
+++ b/account/m_password_reset.html
@@ -40,7 +40,7 @@
 				</div>
 			</div>
 		</div>
-		<script src="../js/mui.min.js"></script>
+		<script src="../js/mui.js"></script>
 		<script src="../js/accounts/user-validate.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			mui.init({
