--- a/browser.html
+++ b/browser.html
@@ -37,7 +37,7 @@
 		    <h1 class="mui-title">挖福利-内置浏览器</h1>
 		</header>
 		
-		<script type="text/javascript" charset="UTF-8" src="js/mui.min.js"></script>
+		<script type="text/javascript" charset="UTF-8" src="js/mui.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="js/app.js"></script>
 		<script>
 			(function($) {
