--- a/html/m_activity.html
+++ b/html/m_activity.html
@@ -25,7 +25,7 @@
 		        </li>
 	        </ul>	    
 		</div>
-		<script src="../js/mui.min.js"></script>
+		<script src="../js/mui.js"></script>
 		<script type="text/javascript">
 			mui.init()
 		</script>
