--- a/registration/m_invite_accept.html
+++ b/registration/m_invite_accept.html
@@ -40,7 +40,7 @@
 	    </form>
 	    <a class="reg-btn" id="register"></a>
 	</div>
-	<script src="../js/mui.min.js"></script>
+	<script src="../js/mui.js"></script>
 	<script src="../js/accounts/user-validate.js"></script>
 	<script>
 		mui.init({
