--- a/registration/m_login.html
+++ b/registration/m_login.html
@@ -8,7 +8,7 @@
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/m_common.css" />
 		<link rel="stylesheet" type="text/css" href="../css/m_login.css" />
-		<script src="../js/mui.min.js"></script>
+		<script src="../js/mui.js"></script>
 	</head>
 
 	<body>
