--- a/registration/m_register.html
+++ b/registration/m_register.html
@@ -9,7 +9,7 @@
 		<link href="../css/m_style.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../css/m_common.css"/>
 		<link rel="stylesheet" type="text/css" href="../css/m_register.css"/>
-		<script src="../js/mui.min.js"></script>
+		<script src="../js/mui.js"></script>
 		<script src="../js/accounts/user-validate.js"></script>
 	</head>
 
