--- a/registration/m_user_guide.html
+++ b/registration/m_user_guide.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/m_user_guide.css"/>
 		<link href="../css/m_style.css" rel="stylesheet" />
 		<script src="../js/accounts/user-validate.js"></script>
-		<script src="../js/mui.min.js"></script>
+		<script src="../js/mui.js"></script>
 	</head>
 
 	<body>
