--- a/account/m_account_bind_zhifubao.html
+++ b/account/m_account_bind_zhifubao.html
@@ -48,7 +48,7 @@
 			<button id="Btn" type="button" class="bottom mui-btn mui-btn-blue mui-btn-block">立即绑定</button>
 		</div>
 		
-		<script src="../js/mui.min.js"></script>
+		<script src="../js/mui.js"></script>
 		<script src="../js/UserInfo.js"></script>
 		<!--弹窗部分-->
 		<script type="text/javascript" charset="utf-8">
