--- a/account/m_account_change_zhifubao.html
+++ b/account/m_account_change_zhifubao.html
@@ -56,7 +56,7 @@
 				
 		</div>
 		
-		<script src="../js/mui.min.js"></script>
+		<script src="../js/mui.js"></script>
 	    <script src="../js/UserInfo.js"></script>
 	    <script>
 	    	var sendtelcode_url = "http://test.wafuli.cn/account/phoneImageV/";
