--- a/account/m_account_charge.html
+++ b/account/m_account_charge.html
@@ -96,7 +96,7 @@
 		</div>
 
 		<!-- </div> -->
-		<script src="../js/mui.min.js"></script>
+		<script src="../js/mui.js"></script>
 		<script src="../js/mui.pullToRefresh.js"></script>
 		<script src="../js/mui.pullToRefresh.material.js"></script>
 		<script type="text/javascript" src="../js/UserInfo.js"></script>
