--- a/account/m_account_coupon.html
+++ b/account/m_account_coupon.html
@@ -130,7 +130,7 @@
     </div>
   </div>   
   
-    <script src="../js/mui.min.js"></script>
+    <script src="../js/mui.js"></script>
 	<script src="../js/mui.pullToRefresh.js"></script>
 	<script src="../js/mui.pullToRefresh.material.js"></script>
 	<script src="../js/UserInfo.js"></script>
