--- a/account/m_account_score.html
+++ b/account/m_account_score.html
@@ -106,7 +106,7 @@
 		</div>
 
 
-		<script src="../js/mui.min.js"></script>
+		<script src="../js/mui.js"></script>
 		<script src="../js/mui.pullToRefresh.js"></script>
 		<script src="../js/mui.pullToRefresh.material.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="../js/UserInfo.js"></script>
