--- a/account/m_account_welfare.html
+++ b/account/m_account_welfare.html
@@ -92,7 +92,7 @@
 </div>
 
 
-  	<script src="../js/mui.min.js"></script>
+  	<script src="../js/mui.js"></script>
 	<script src="../js/mui.pullToRefresh.js"></script>
 	<script src="../js/mui.pullToRefresh.material.js"></script>
 	<script src="../js/UserInfo.js"></script>
