--- a/account/m_activity_lottery.html
+++ b/account/m_activity_lottery.html
@@ -181,7 +181,7 @@
 
 
 
-		<script src="{%static 'js/mui.min.js'%}"></script>
+		<script src="{%static 'js/mui.js'%}"></script>
 		<script src="{%static 'js/share.js'%}"></script>
 
 		<script type="text/javascript">
