--- a/account/m_strategy.html
+++ b/account/m_strategy.html
@@ -84,7 +84,7 @@
 			</div>
 		</div>
 
-		<script src="../js/mui.min.js"></script>
+		<script src="../js/mui.js"></script>
 		<!--弹窗部分-->
 		<script type="text/javascript" charset="utf-8">
 	      	mui.init({
