--- a/html/m_detail_finance.html
+++ b/html/m_detail_finance.html
@@ -1,53 +1,25 @@
-{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <!-- 优先使用 IE 最新版本和 Chrome -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <!-- 为移动设备添加 viewport -->
-    <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <!-- 添加到主屏后的标题（iOS 6 新增） -->
-    <meta name="apple-mobile-web-app-title" content="">
-    <!-- 是否启用 WebApp 全屏模式，删除苹果默认的工具栏和菜单栏 -->
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <!-- 设置苹果工具栏颜色 -->
-    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-    <!-- 添加智能 App 广告条 Smart App Banner（iOS 6+ Safari） -->
-    <meta name="apple-itunes-app" content="app-id=myAppStoreID, affiliate-data=myAffiliateData, app-argument=myURL">
-    <!-- 忽略页面中的数字识别为电话，忽略email识别 -->
-    <meta name="format-detection" content="telphone=no, email=no"/>
-    <!--下面三个是清除缓存 微信浏览器缓存严重又无刷新；这个方法调试的时候很方便-->
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Cache-Control" content="no-cache">
-    <meta http-equiv="Expires" content="0">
-    <title>{{news.seo_title}}</title>
-	<meta name="keywords" content="{{news.seo_keywords}}" />
-	<meta name="description" content="{{news.seo_description}}" />
-	<link href="{% static 'images/favicon.ico'%}" rel="shortcut icon"/>
-    <link href="{%static 'css/mui.min.css'%}" rel="stylesheet"/>
-    <link rel="stylesheet" type="text/css" href="{%static 'css/m_common.css'%}"/>
-    <link rel="stylesheet" type="text/css" href="{%static 'css/m_detail_taskandfinance.css'%}"/>
+    <link href="../css/mui.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="../css/m_common.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/m_detail_taskandfinance.css"/>
 </head>
 
 	<body>
-		<header id="header" class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">{{news.title}}</h1>
-			<a id="share" class="share"></a>
-		</header>
 		<div class="mui-content">
 			<div class="ad">
-				<img src="{{news.pic.url}}">
+				<img id="picture" src="../images/blank.jpg">
 			</div>
 			<!--体验步骤部分-->
 			<div class="taste">
 				<h3 class="reward"><i class="iconfont">&#xe613;</i>奖励规则</h3>
-				{{news.rules|safe}}
+				<div id="rules" class="detail-html"></div>
 			</div>
 			<div class="taste-02">
 				<h3><i class="iconfont">&#xe61c;</i>体验步骤</h3>
-				<div class="detail-html">{{news.strategy|safe}}</div>
+				<div id="strategy" class="detail-html"></div>
 			</div>
 			<!--温馨提示部分-->
 			<div class="prompt">
@@ -76,97 +48,74 @@
 				<span id="close_01" class="mui-icon mui-icon-close"></span>
 				<p>长安识别图中二维码</p>
 				<img id="erweima_img"/>
-				<p>{{news.title}}</p>
+				<p id="erweima_title"></p>
 			</div>
 		</div>
 
-		<script src="{%static 'js/mui.min.js'%}"></script>
-		<script src="{%static 'js/share.js'%}"></script>
+		<script src="../js/mui.js"></script>
+		<script src="../js/UserInfo.js"></script>
 		<script type="text/javascript" charset="utf-8">
-			mui.init({
-				beforeback: function(){
-					var is_back = true;
-					var refer = document.referrer;
-					if(refer){
-						var flag = refer.indexOf("m.wafuli.cn");
-						if (flag===-1){
-							is_back = false;
-						}
-						else {
-							is_back = true;
-						}
-					}
-					else {
-						is_back = false;
-					}
-					if (is_back){
-						return true;
-					}
-					else{
-						mui.openWindow({
-				            url: "{% url 'index' %}",
-				            styles: {
-				                top: 0,
-				                bottom: 0
-				            },
-				            show: {
-				                aniShow: 'slide-in-right',
-				            },
-				            waiting: {
-				                autoShow: false, //自动显示等待框
-				                title: '正在加载...', //等待对话框上显示的提示内容
-				            }
-				        });
-						return false;
-					}
-				}
-			});
-			var id = '{{news.id}}';
-			var type = '{{type}}';
-			{%if news.isonMobile %}
-			var ismobile = true;
-			var url_get_erweima = "{%url 'exp_welfare_erweima' %}"
-			{%else%}
+			mui.init();
+			var id = '';
 			var ismobile = false;
-			var url_openwindow = "{% url 'exp_welfare_openwindow' %}";
-			{%endif%}
-			mui.ready(function(){
-				document.getElementById("exp_btn").addEventListener('tap', function() {
-					if(ismobile){
-						mui.ajax({
-							url:url_get_erweima + "?id=" + id + "&type=" + type,
-							dataType:"json",
-							success:function(ret){
-								if(ret.code==0){
-									window.location.href = ret.url;
-								}
-								else if(ret.code==1){
-									document.getElementById('erweima_img').src = ret.url;
-									document.getElementById("ding_yue").style.display="block";
-								}
-							},
-							error:function(xhr,type,errorThrown){
-								mui.alert(type);
+			var exp_url = '';
+			var self = null;
+			mui.plusReady(function(){
+		  		self = plus.webview.currentWebview();
+		  	});
+			window.addEventListener('display',function(event){
+			  //获得事件参数
+			  	id = event.detail.id;
+			  	img = event.detail.img;
+			  	document.getElementById('picture').src = img;
+			  //根据id向服务器请求新闻详情
+		  		var url_get_content= "http://test.wafuli.cn/app/detail/finance/";
+		  		mui.ajax({
+					url:url_get_content,
+					dataType:"json",
+					data: {
+						token:UserInfo.token(),
+						id:id,
+					},
+					success:function(ret){
+						if(ret.code!=0){
+							mui.alert(ret.msg);
+						}
+						else{
+							var info = ret.financeinfo;
+							ismobile = info.ismobile;
+							document.getElementById('strategy').innerHTML = info.strategy;
+							document.getElementById('rules').innerHTML = info.rules;
+							if(ismobile){
+								document.getElementById('erweima_img').src = info.url;
+								document.getElementById('erweima_title').src = info.title;
 							}
-						});
-					}
-					else {
-						window.open(url_openwindow + "?id=" + id + "&type=" + type);
+							else {
+								exp_url = info.url;
+							}
+							if(info.state=='1'){
+								exp_btn.disabled = false;
+							}
+							else {
+								reg_btn.disabled = true;
+							}
+						}
+						
+					},
+					error:function(xhr,type,errorThrown){
+						mui.alert(type);
 					}
 				});
-				document.getElementById("close_01").addEventListener('tap', function() {
-					document.getElementById("ding_yue").style.display="none";
-				});
-				document.getElementById("reg_btn").addEventListener('tap', function() {
-					var exp_url = "";
-					if (type=="Task"){
-						exp_url = "{% url 'expsubmit_task' %}";
-					}
-					else{
-						exp_url = "{% url 'expsubmit_finance' %}";
-					}
+				window.scrollTo(0, 0);
+				setTimeout(function(){self.show();},100);
+			  	var sss='share_msg.pictures=["' + img + '",];share_msg.thumbs=["' + img + '",];share_msg.href = "http://test.wafuli.cn/task/' + id + '/";';
+				self.parent().evalJS(sss);
+			});
+			exp_btn.addEventListener('tap', function() {
+				if (!UserInfo.has_login()){
 					mui.openWindow({
-			            url: exp_url + "?id=" + id,
+			            url: "../a_login.html",
+			            id:"login",
 			            styles: {
 			                top: 0,
 			                bottom: 0
@@ -174,27 +123,40 @@
 			            show: {
 			                aniShow: 'slide-in-right',
 			            },
-			            waiting: {
-			                autoShow: false, //自动显示等待框
-			                title: '正在加载...', //等待对话框上显示的提示内容
-			            }
 			        });
-				});
+				}
+				else{
+					var browserMainWebview = plus.webview.getWebviewById('browser_main');
+					var browserWebview = plus.webview.getWebviewById('browser_sub');
+					mui.fire(browserMainWebview, 'mui.view.beforeshow');
+					browserWebview.loadURL(exp_url);
+					browserMainWebview.show('pop-in', 200);
+				}
+			});
+			document.getElementById("close_01").addEventListener('tap', function() {
+				document.getElementById("ding_yue").style.display="none";
+			});
+			reg_btn.addEventListener('tap', function() {
+				var sub_url = "m_expsubmit_finance.html";
+				mui.openWindow({
+		            url: sub_url,
+		            styles: {
+		                top: 0,
+		                bottom: 0
+		            },
+		            show: {
+		                aniShow: 'slide-in-right',
+		            },
+		            waiting: {
+		                autoShow: false, //自动显示等待框
+		                title: '正在加载...', //等待对话框上显示的提示内容
+		            },
+		            extras:{
+		            	sub_id:id,
+		            }
+		        });
 			});
 		</script>
-	{%if back %}
-		<script>
-		mui.back = function(){
-			var history = window.history;
-			if (history.length > 4 ){
-				history.go(-4);
-			}
-			else{
-				history.back();
-			}
-		};
-		</script>
-	{%endif%}
 	</body>
 
 </html>
