--- a/m_finance_sub3.html
+++ b/m_finance_sub3.html
@@ -2,24 +2,6 @@
 <html>
 	<head lang="en">
 		<meta charset="UTF-8">
-		<!-- 优先使用 IE 最新版本和 Chrome -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<!-- 为移动设备添加 viewport -->
-		<meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-		<!-- 添加到主屏后的标题（iOS 6 新增） -->
-		<meta name="apple-mobile-web-app-title" content="">
-		<!-- 是否启用 WebApp 全屏模式，删除苹果默认的工具栏和菜单栏 -->
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<!-- 设置苹果工具栏颜色 -->
-		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-		<!-- 添加智能 App 广告条 Smart App Banner（iOS 6+ Safari） -->
-		<meta name="apple-itunes-app" content="app-id=myAppStoreID, affiliate-data=myAffiliateData, app-argument=myURL">
-		<!-- 忽略页面中的数字识别为电话，忽略email识别 -->
-		<meta name="format-detection" content="telphone=no, email=no" />
-		<!--下面三个是清除缓存 微信浏览器缓存严重又无刷新；这个方法调试的时候很方便-->
-		<meta http-equiv="Pragma" content="no-cache">
-		<meta http-equiv="Cache-Control" content="no-cache">
-		<meta http-equiv="Expires" content="0">
 		<link href="css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="css/m_common.css" />
 		<link rel="stylesheet" type="text/css" href="css/m_finance.css" />
@@ -35,12 +17,14 @@
 			</div>
 		</div>
 
-		<script type="text/javascript" charset="UTF-8" src="js/mui.min.js"></script>
+		<script type="text/javascript" charset="UTF-8" src="js/mui.js"></script>
+		<script type="text/javascript" charset="UTF-8" src="js/template.js"></script>
 		<script>
 			var table = document.body.querySelector('.mui-table-view');
-			var get_task_url = "http://test.wafuli.cn/finance_json";
+			var get_finance_url = "http://test.wafuli.cn/finance_json";
 			var host = "http://test.wafuli.cn";
 			var count = 0;
+			var template = null;
 			mui.init({
 				pullRefresh: {
 					container: '#pullrefresh',
@@ -56,8 +40,11 @@
 					}
 				}
 			});
+			mui.plusReady(function(){
+				template = getTemplate('finance','template.html',"html/m_detail_finance.html");
+			});
 			function get_finance_list(ul,n,index){
-				mui.ajax(get_task_url,{
+				mui.ajax(get_finance_url,{
 					data:{
 						count:n,
 						type:index,
@@ -76,7 +63,7 @@
 								var wel = data[i];
 								var li = document.createElement('li');
 								li.className = 'mui-table-view-cell';
-								li.innerHTML = '<a href="' + wel.url + '"><div class="title"><strong>'+ wel.title +
+								li.innerHTML = '<a class="clearfix" data_id="' + wel.id + '" href="' + wel.url + '"><div class="title"><strong>'+ wel.title +
 									'</strong><span>官网利息：<font>' + wel.interest + '</font></span></div>'+
 									'<div class="container clearfix">'+
 									'<div><img src="' + host + wel.picurl + '" /><span>' + wel.category + '</span>'+
@@ -92,6 +79,27 @@
 					}
 				});
 			}
+			var detailMainWebview = null; //详情页面父webview
+			var detailWebview = null; //详情页面子webview
+			function open_welfare_detail(id,title,img) {
+				if (!template){
+					mui.alert("页面还在加载，稍等~");
+				}
+				detailMainWebview = template.header;
+				detailWebview = template.content;
+				mui.fire(detailMainWebview, 'updateHeader', {
+					title: title
+				});
+				mui.fire(detailWebview, 'display', {
+					id: id,
+					img: img,
+				});
+			};
+			mui('.mui-table-view').on('tap', 'a', function() {
+				var title = this.querySelector('strong').innerText;
+				var img = this.querySelector('img').src;
+				open_welfare_detail(this.getAttribute('data_id'),title,img);
+			});
 		</script>
 	</body>
 
