--- a/m_index.html
+++ b/m_index.html
@@ -2,22 +2,8 @@
 <html>
 	<head lang="en">
 	    <meta charset="UTF-8">
-	    <!-- 优先使用 IE 最新版本和 Chrome -->
-	    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-	    <!-- 为移动设备添加 viewport -->
-	    <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-	    <!-- 添加到主屏后的标题（iOS 6 新增） -->
-	    <meta name="apple-mobile-web-app-title" content="">
-	    <!-- 是否启用 WebApp 全屏模式，删除苹果默认的工具栏和菜单栏 -->
-	    <meta name="apple-mobile-web-app-capable" content="yes"/>
-	    <!-- 设置苹果工具栏颜色 -->
-	    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-	    <!-- 添加智能 App 广告条 Smart App Banner（iOS 6+ Safari） -->
-	    <meta name="apple-itunes-app" content="app-id=myAppStoreID, affiliate-data=myAffiliateData, app-argument=myURL">
-	    <!-- 忽略页面中的数字识别为电话，忽略email识别 -->
-	    <meta name="format-detection" content="telphone=no, email=no"/>
 	    <title>挖福利</title>
-	    <script src="js/mui.min.js"></script>
+	    <script src="js/mui.js"></script>
 	    <link href="css/mui.min.css" rel="stylesheet"/>
 	</head>
 	<body>
@@ -44,7 +30,7 @@
 			</a>
 		</nav>
 	</body>
-	<script src="../js/mui.min.js"></script>
+	<script src="../js/mui.js"></script>
 	<script type="text/javascript" charset="utf-8">
 		//mui初始化
 		mui.init();
@@ -52,7 +38,8 @@
 		var subpage_style = {
 			top: '0px',
 			bottom: '51px',
-			hardwareAccelerated:true
+			hardwareAccelerated:true,
+			dock:"bottom",
 		};
 		
 		var aniShow = {};
@@ -65,10 +52,6 @@
 			var self = plus.webview.currentWebview();
 			for(var i = 0; i < 4; i++) {
 				var temp = {};
-				if(i==0){
-					subpage_style.render = "always";
-					console.log(JSON.stringify(subpage_style));
-				}
 				var sub = plus.webview.create(subpages[i], subpages[i], subpage_style);
 				if(i > 0) {
 					sub.hide();
