--- a/html/m_detail_information.html
+++ b/html/m_detail_information.html
@@ -2,6 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link href="../css/mui.min.css" rel="stylesheet" />
 	<link rel="stylesheet" type="text/css" href="../css/m_common.css" />
 	<link rel="stylesheet" type="text/css" href="../css/m_detail_information.css" />
@@ -9,7 +10,7 @@
 
 	<body>
 		<header id="header" class="mui-bar mui-bar-nav">
-			<a id="mui-action-back" class="mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">资讯详情</h1>
 			<a id="share" class="share iconfont icon-fenxiang"></a>
 		</header>
