--- a/html/m_expsubmit_finance.html
+++ b/html/m_expsubmit_finance.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+    	<meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 		<link href="../css/mui.min.css" rel="stylesheet"/>
     	<link rel="stylesheet" type="text/css" href="../css/m_common.css"/>
     	<link rel="stylesheet" type="text/css" href="../css/m_expsubmit_task.css"/>
