--- a/m_finance.html
+++ b/m_finance.html
@@ -18,6 +18,7 @@
 			</div>
 		</div>
 		<script type="text/javascript" charset="UTF-8" src="js/mui.js"></script>
+		<script src="js/template.js"></script>
 		<script>
 			mui.init();
 			var subpages = ['m_finance_sub1.html','m_finance_sub2.html','m_finance_sub3.html'];
