--- a/m_welfare.html
+++ b/m_welfare.html
@@ -73,10 +73,8 @@
 		                    </a>
 		                </li>
 		            	<li id="weixin_btn">
-		                	<a href="#">
 		                    	<i class="icon iconfont ic-08"></i>
 		                        <span>微信公众号</span>
-		                    </a>
 		                </li>
 		            </ul>
 		    	</div>
@@ -99,6 +97,17 @@
 				</div>
 			</div>
 		</div>
+		<!--弹出二维码部分-->
+	    <div id="weixin_bg" class="er-wei-ma-bg">
+	    </div>
+	    <div id="weixin_box" class="weixin-box-00">
+	        <div class="weixin-box">
+	            <span id="close_01" class="mui-icon mui-icon-closeempty"></span>
+	            <p>长按识别图中二维码</p>
+	            <img id="erweima_img" src="images/gongzhong.jpg"/>
+	            <p>微信公众号_天天挖福利</p>
+	        </div>
+	    </div>
 		<script type="text/javascript" charset="UTF-8" src="js/mui.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="js/feed.js"></script>
 		<script type="text/javascript" charset="UTF-8" src="js/html5sql.js"></script>
@@ -114,6 +123,9 @@
 			var tempview = null;
 			 //初始化下拉刷新模块  
 			mui.init({
+				gestureConfig:{
+					longtap: true,
+				},
 				pullRefresh: {
 					container: '#pullrefresh',
 					down: {
@@ -187,6 +199,27 @@
 //		                aniShow: 'slide-in-right',
 //		            },
 //		        });
+			});
+			var weixin_btn = document.getElementById("weixin_btn"),
+            close_01 = document.getElementById("close_01"),
+            weixin_bg = document.getElementById("weixin_bg"),
+            weixin_box = document.getElementById("weixin_box");
+            //监听点击事件
+            weixin_btn.addEventListener("tap",function () {
+                weixin_bg.style.display = "block";
+                weixin_box.setAttribute("class","weixin-box-01");
+            });
+
+            close_01.addEventListener("tap",function () {
+                weixin_bg.style.display = "none";
+                weixin_box.setAttribute("class","weixin-box-02");
+            });
+            erweima_img.addEventListener("longtap",function () {
+            	plus.barcode.scan('_www/images/gongzhong.jpg', function (type,result) {
+					alert( "Scan success:("+type+")"+result );
+				}, function (error) {
+					alert( error.message );
+				});
 			});
 			var detailMainWebview = null; //详情页面父webview
 			var detailWebview = null; //详情页面子webview
