--- a/html/m_activity.html
+++ b/html/m_activity.html
@@ -15,15 +15,23 @@
 			<h1 class="mui-title">要赚现金</h1>
 			<a id="share" class="share iconfont icon-fenxiang"></a>
 		</header>
-		<div class="mui-content">	
+		<div class="mui-content">
 	        <ul class="list-box">
-		        <li class="list">
-		            <a href="/activity/recommend/"><img src="../images/make-money-zhongfuli.jpg"/></a>
+		        <li class="li-zhongfuli list">
+		            <a href="/activity/recommend/">
+		            	<img src="../images/make-money-zhongfuli.png"/>
+		            	<p>独福利不如众福利<br />
+		            	提供福利赚现金</p>
+		            </a>
 		        </li>
-		        <li class="list">
-		        	<a href="/freshman/award/"><img src="../images/make-money-new-user.png"/></a>
+		        <li class="li-new list">
+		        	<a href="/freshman/award/">
+		        		<img src="../images/make-money-new-user.png"/>
+		        		<p>新人注册送现金<br />
+		        		推荐更有大礼</p>
+		        	</a>
 		        </li>
-	        </ul>	    
+	        </ul>
 		</div>
 		<script src="../js/mui.js"></script>
 		<script type="text/javascript">
